# nego-eval

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  tournament.py  tournament_config.py
agent-human-sessions/: user-100_holiday_LLM_20260516_170647_461685.xlsx  user-100_holiday_Traditional_20260516_172742_740710.xlsx  user-101_holiday_LLM_20260517_175938_924821.xlsx  user-101_holiday_Traditional_20260517_182202_462427.xlsx  user-102_holiday_LLM_20260517_184214_635085.xlsx  user-102_holiday_Traditional_20260517_185525_437285.xlsx  user-103_holiday_LLM_20260514_135007_212697.xlsx  user-103_holiday_Traditional_20260514_132947_093661.xlsx  user-104_holiday_LLM_20260516_155011_157075.xlsx  user-104_holiday_Traditional_20260516_154030_913600.xlsx  user-105_holiday_LLM_20260516_180726_437268.xlsx  user-105_holiday_Traditional_20260516_181842_220713.xlsx  user-106_holiday_LLM_20260516_173335_110358.xlsx  user-106_holiday_Traditional_20260516_171851_301565.xlsx  user-107_holiday_LLM_20260516_192534_226834.xlsx  user-107_holiday_Traditional_20260516_190814_823014.xlsx  user-108_holiday_LLM_20260517_131229_249985.xlsx  user-108_holiday_Traditional_20260517_133311_641597.xlsx  user-10_holiday_LLM_20260514_171536_409263.xlsx  user-10_holiday_Traditional_20260514_165323_800602.xlsx  user-11_holiday_LLM_20260517_132410_465441.xlsx  user-11_holiday_Traditional_20260517_133757_282290.xlsx  user-12_holiday_LLM_20260517_190713_103087.xlsx  user-12_holiday_Traditional_20260517_184640_659377.xlsx  user-13_holiday_LLM_20260514_162052_510198.xlsx  (+191 more)
(+2506 files in other folders)
