[project]
name = "llm-nego-framework"
version = "0.1.0"
description = "An LLM-based multi-agent negotiation framework"
authors = [{ name = "X", email = "X" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "dotenv>=0.9.9",
    "scipy>=1.16.1",
    "matplotlib>=3.10.6",
    "gradio>=5.0.0,<6.0.0",
    "dspy>=2.6.17",
    "pydantic>=2.10.6",
    "langchain>=1.0.3",
    "langgraph>=1.0.5",
    "langsmith>=0.3.17",
    "statsmodels>=0.14.6",
    "seaborn>=0.13.2",
    "scikit-learn>=1.8.0",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
